--- a/src/web/package.json
+++ b/src/web/package.json
@@ -1,6 +1,6 @@
 {
   "proxy": "http://localhost:4000",
-  "name": "client",
+  "name": "@src/web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
