chore: remove eslint

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Workout tracker",
   "scripts": {
-    "dev": "pnpm -C src/server dev & pnpm -C src/web dev",
+    "dev": "pnpm -C src/server dev & pnpm -C src/web start",
     "build": "pnpm -C src/server build && pnpm -C src/web build",
     "lint": "pnpm -C src/server lint && pnpm -C src/web lint",
     "test": "pnpm -C src/server test && pnpm -C src/web test"
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^9.39.1",
     "typescript": "^5.9.3"
   }
 }
